2013-11-09  Holger Seelig  <holger.seelig@yahoo.de>

	* DepthBuffer.cpp:
	* TransformTool.wrl:
	* PlaneSensor.h:
	* PlaneSensor.cpp: 

2013-11-08  Holger Seelig  <holger.seelig@yahoo.de>

	* MovieTexture.h:
	* ImageTexture.h:
	* PixelTexture.h:
	* MultiTexture.h:
	* MultiTexture.cpp:
	* PixelTexture.cpp:
	* X3DTextureNode.h:
	* ImageTexture3D.h:
	* PixelTexture3D.h:
	* PixelTexture3D.cpp:
	* ComposedTexture3D.h:
	* ComposedTexture3D.cpp:
	* Background.h:
	* Background.cpp:
	* ImageCubeMapTexture.h:
	* TextureBackground.h:
	* X3DBackgroundNode.h:
	* ComposedCubeMapTexture.h:
	* TextureBackground.cpp:
	* X3DBackgroundNode.cpp:
	* GeneratedCubeMapTexture.h:
	* X3DEnvironmentTextureNode.h:
	* X3DEnvironmentTextureNode.cpp: 

2013-11-08  Holger Seelig  <holger.seelig@yahoo.de>

	* DepthBuffer.h:
	* DepthBuffer.cpp:
	* X3DRenderer.cpp:
	* CollisionShape.cpp:
	* Viewport.h:
	* X3DChildNode.h:
	* ClipPlane.h:
	* Viewport.cpp:
	* LayoutGroup.cpp:
	* X3DLightNode.h:
	* ClipPlane.cpp:
	* X3DLightNode.cpp:
	* X3DGeometryNode.h:
	* X3DGroupingNode.cpp:
	* X3DGeometryNode.cpp:
	* LocalFog.h: 

2013-11-07  Holger Seelig  <holger.seelig@yahoo.de>

	* Background.cpp: 

2013-11-07  Holger Seelig  <holger.seelig@yahoo.de>

	* DepthBuffer.h:
	* X3DRenderer.cpp:
	* DepthBuffer.cpp:
	* CollisionShape.cpp:
	* X3DFlyViewer.cpp:
	* X3DLayerNode.cpp:
	* Background.cpp:
	* X3DComposedGeometryNode.cpp:
	* X3DBackgroundNode.cpp: 

2013-11-07  Holger Seelig  <holger.seelig@yahoo.de>

	* Notification.wrl:
	* DepthBuffer.cpp:
	* ClipPlaneContainer.h:
	* ClipPlaneContainer.cpp:
	* ClipPlane.h:
	* ClipPlane.cpp:
	* X3DGeometryNode.h:
	* X3DGroupingNode.cpp:
	* X3DGeometryNode.cpp: 

2013-11-07  Holger Seelig  <holger.seelig@yahoo.de>

	* ViewportContainer.cpp:
	* X3DShapeNode.cpp: 

2013-11-07  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-x3d.cproj:
	* OpenGL.h:
	* X3DRenderer.cpp:
	* DepthBuffer.cpp:
	* LightContainer.h:
	* CollisionShape.h:
	* CollisionArray.h: